--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,7 +5,8 @@ name: GitHub Pages
 on:
   push:
     branches:
-      - main
+      - main  # Set a branch that will trigger a deployment
+  pull_request:
 
 jobs:
   build-deploy:
@@ -33,4 +34,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: ./public
